--- a/Exam/Exam/Views/Shared/_Layout.cshtml
+++ b/Exam/Exam/Views/Shared/_Layout.cshtml
@@ -20,9 +20,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Classroom", "Index", "Classroom")</li>
+                    <li>@Html.ActionLink("Falculty", "Index", "FalCulty")</li>
+                    <li>@Html.ActionLink("Test", "Index", "Test")</li>
+                    <li>@Html.ActionLink("ExamSubject", "Index", "ExamSubject")</li>
+                    <li>@Html.ActionLink("Status", "Index", "Status")</li>
                 </ul>
             </div>
         </div>
