--- a/Exam/Exam/Views/Test/Details.cshtml
+++ b/Exam/Exam/Views/Test/Details.cshtml
@@ -35,6 +35,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Status.StatusName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Status.StatusName)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Starttime)
         </dt>
 
